--- a/IAccount/IAccount/IAccount.csproj
+++ b/IAccount/IAccount/IAccount.csproj
@@ -90,8 +90,12 @@
     <Compile Include="Tests\AccountTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="log4.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="log4.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
